--- a/src/components/Support/styles.module.css
+++ b/src/components/Support/styles.module.css
@@ -15,18 +15,22 @@
 }
 .main{
   display: flex;
-  margin:0 110px;
+  margin:50px 110px;
+  height:calc(100vh - 175px);
 }
 .menu{
-  flex-basis: 220px;
+  flex-basis: 260px;
+  border:1px solid #DDE5EF;
+  overflow: scroll;
 }
 .menu p{
   font-size:12px;
   background-color: #F0F2F5;
-  border:1px solid #DDE5EF;
+  border-bottom:1px solid #DDE5EF;
   height: 30px;
   line-height: 30px;
   padding-left: 10px;
+
 }
 .content{
   flex:1;
@@ -35,6 +39,12 @@
   margin-left: 15px;
   padding: 20px;
   line-height: 1.4;
+  overflow: scroll;
+  height: 100%;
+}
+
+.content a{
+  text-decoration: none;
 }
 
 .content img{
@@ -85,4 +95,29 @@
 .p{
   padding: 10px 0;
   margin-bottom: 0;
+}
+
+.table dt{
+  border-bottom: 1px solid;
+  margin-bottom: 10px;
+}
+.table ul{
+  display: flex;
+}
+
+
+.table li:first-child{
+  flex:5;
+}
+
+.table li:nth-child(2){
+  flex:2;
+}
+
+.table li:last-child{
+  flex:2;
+}
+
+.pl1{
+  padding-left: 25px;
 }
