fix etl bug && add label for recommend model

--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -1016,3 +1016,13 @@ span.performanceScore {
 .nohover:hover {
   cursor: text;
 }
+
+.recommendLabel {
+    font-size: 0.875rem;
+    line-height: 1.4;
+    white-space: nowrap;
+}
+
+.recommendLabel :global(.ant-tooltip-inner) {
+    min-height: 0;
+}
