--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -1025,11 +1025,12 @@ span.advancedDesc {
   font-size: 0.75rem
 }
 
-.disable {
+button.disable {
   cursor: not-allowed;
   background-color: #d3d3d3;
   color: #aaaaaa;
   background-image: none;
+  border-color: transparent;
 }
 
 .reset {
