fix target issue && fix edit fix buf

--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -1026,3 +1026,7 @@ span.performanceScore {
     line-height: 1.4;
     white-space: nowrap;
 }
+
+.recommendLabel :global(.ant-tooltip-inner) {
+    min-height: 0;
+}
