--- a/src/components/Report/VariableList/styles.module.css
+++ b/src/components/Report/VariableList/styles.module.css
@@ -148,3 +148,93 @@
   background: #5cca71;
   width: 100%;
 }
+
+.targetTable {
+  display: flex;
+  flex: none;
+  flex-direction: column;
+  border: solid 0.5px #979797;
+  max-width: 9em;
+  margin-bottom: 20px;
+}
+
+.targetHead {
+  display: flex;
+  flex: none;
+  padding: 0.1em 0;
+  margin: 0 0.2em;
+  border-bottom: 1px solid #000;
+}
+
+.targetRow {
+  display: flex;
+  flex: none;
+  padding: 0.1em 0;
+  margin: 0 0.2em;
+}
+
+.targetCell {
+  display: flex;
+  flex: 1 1;
+  width: 0;
+  padding: 0 0.05em;
+  align-items: center;
+  position: relative;
+}
+
+.targetCell span {
+  font-family: SanFranciscoText;
+  color: #4a4a4a;
+  font-size: 0.875rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-height: 1.2;
+}
+
+.large {
+  flex: 2 1;
+}
+
+.targetName {
+  flex: 2 1;
+}
+
+.targetName span {
+  font-size: 1.125rem;
+}
+
+/* .targetHistogram {
+  flex: 2 1;
+  cursor: pointer;
+} */
+
+.targetHistogram img {
+  margin-right: 0.05em;
+}
+
+.targetHistogram span {
+  text-decoration-line: underline;
+  color: #448eed;
+}
+
+.target:first-child {
+  margin-right: 100px;
+}
+
+.target {
+  display: inline-block;
+}
+
+.etlTitle {
+  font-size: 16px;
+  display: block;
+  text-align: left;
+}
+
+.targetPlot {
+  width: 450px;
+}
+
+.blockRow {
+  margin-top: 10px;
+}
