--- a/src/components/Report/styles.module.css
+++ b/src/components/Report/styles.module.css
@@ -41,24 +41,6 @@ html {
   font-size: 16px;
 }
 
-.target:first-child {
-  margin-right: 100px;
-}
-
-.target {
-  display: inline-block;
-}
-
-.etlTitle {
-  font-size: 16px;
-  display: block;
-  text-align: left;
-}
-
-.targetPlot {
-  width: 450px;
-}
-
 .schema {
   font-size: 16px;
   width: 500px;
@@ -76,7 +58,33 @@ html {
 
 .schemaCell {
   padding: 2px 5px;
-  flex: 1 1 0;
+  flex: 1 0 0;
   border-bottom: 1px solid #aaa;
   border-right: 1px solid #aaa;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.metrics {
+  font-size: 16px;
+  width: 800px;
+  border-top: 1px solid #aaa;
+  border-left: 1px solid #aaa;
+}
+
+.metricsRow {
+  display: flex;
+}
+
+.metricsHeader {
+  background: #ccc;
+}
+
+.metricsCell {
+  padding: 2px 5px;
+  flex: 1 0 0;
+  border-bottom: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
