--- a/src/components/Modeling/AdvancedView/AdvancedView.module.css
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.css
@@ -221,9 +221,9 @@
     margin-right: 1rem;
   }
   .headerLabel {
-    max-width: 80%;
+    max-width: 60%;
     overflow: hidden;
     text-overflow: ellipsis;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: bottom;
   }
