--- a/src/components/Report/Score/AdvancedView.module.css
+++ b/src/components/Report/Score/AdvancedView.module.css
@@ -503,3 +503,13 @@
   display: block;
   font-size: .5rem;
 }
+
+.titles {
+  display: flex;
+}
+
+.blockTitle {
+  flex: 1 1 0;
+  text-align: center;
+  font-size: 1.2rem;
+}
