--- a/src/components/Support/styles.module.css
+++ b/src/components/Support/styles.module.css
@@ -104,6 +104,13 @@
   padding: 15px 0;
   display: block;
   font-size: 13px;
+  color: #4a4a4a;
+  cursor: default;
+}
+
+.h2:hover {
+  color: #4a4a4a;
+  cursor: default;
 }
 
 .p {
