--- a/src/components/Report/Summary/styles.module.css
+++ b/src/components/Report/Summary/styles.module.css
@@ -29,7 +29,7 @@
 
 .summaryTitle span {
 	font-family: HelveticaNeue;
-	font-size: 1.125rem;
+	font-size: 16px;
 	color: #4a4a4a;
 	line-height: 1.2;
 }
