--- a/src/components/Report/VariableList/styles.module.css
+++ b/src/components/Report/VariableList/styles.module.css
@@ -226,9 +226,10 @@
 }
 
 .etlTitle {
-  font-size: 16px;
+  font-size: 13px;
   display: block;
   text-align: left;
+  font-family: HelveticaNeue;
 }
 
 .targetPlot {
@@ -242,6 +243,7 @@
 
 .title {
   font-size: 16px;
+  font-family: HelveticaNeue;
 }
 
 .title:first-child {
