--- a/src/components/Report/VariableList/styles.module.css
+++ b/src/components/Report/VariableList/styles.module.css
@@ -249,3 +249,13 @@
 .title:first-child {
   margin-bottom: 10px;
 }
+
+.correlationMatrix {
+  font-size: 16px;
+}
+
+.subTitle {
+  font-size: 14px;
+  text-align: center;
+  margin: 15px;
+}
