--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -771,7 +771,7 @@ span.advancedDesc {
   flex: none;
   width: 35%;
   flex-direction: column;
-  margin: 0.21em 0;
+  margin: 0.07em 0;
 }
 
 .advancedResampling .advancedOptionBox {
@@ -827,6 +827,7 @@ span.advancedDesc {
   flex: none;
   flex-direction: column;
   width: 65%;
+  margin: -.15em 0;
 }
 
 .otherLabel {
@@ -863,6 +864,7 @@ span.advancedDesc {
   flex: none;
   flex-wrap: wrap;
   width: 100%;
+  margin: -.25em 0 -.1em; 
 }
 
 .advancedAlgorithm {
