--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -1093,7 +1093,7 @@ span.performanceScore {
 .tabBox {
     display: flex;
     flex: none;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     border-bottom: 1px solid #979797;
 }
 
