RL-1038 【显示小问题】Model Comparison Charts中存在图从图标超出

--- a/src/components/D3Chart/D3Chart.module.css
+++ b/src/components/D3Chart/D3Chart.module.css
@@ -31,6 +31,10 @@
 .prchart svg {
   overflow: visible;
 }
+.chart svg g,
+.prchart svg g{
+  overflow: hidden;
+}
 .speedComp .checkbox {
   top: 27px;
   right: 250px;
