RL-1293 [server1] Model Comparison Chart: x-axis title离数字太近

--- a/src/components/D3Chart/D3Chart.module.css
+++ b/src/components/D3Chart/D3Chart.module.css
@@ -30,6 +30,8 @@
 .chart svg,
 .prchart svg {
   overflow: visible;
+  padding-bottom: 20px;
+  box-sizing: content-box;
 }
 .chart svg g,
 .prchart svg g{
