--- a/src/components/Detail/Performance/styles.module.css
+++ b/src/components/Detail/Performance/styles.module.css
@@ -157,6 +157,7 @@
 }
 .select {
   font-size: 1rem;
+  min-width: 180px;
 }
 
 .select :global(.ant-select-selection--single) {
@@ -170,6 +171,7 @@
 .inputNumber {
   height: 3rem;
   font-size: 1rem;
+  min-width: 180px;
 }
 .inputNumber :global(.ant-input-number-input) {
   height: 2.75rem;
