--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -10,7 +10,7 @@
     display: flex;
     font-family: SanFranciscoText;
     line-height: normal;
-    align-items: baseline;
+    align-items: center;
     color: #1d2b3c;
 }
 
