--- a/src/components/Modeling/Start/Preview/styles.module.css
+++ b/src/components/Modeling/Start/Preview/styles.module.css
@@ -15,11 +15,11 @@
 }
 
 .content.active {
-  left: 30px;
+  left: 23px;
 }
 
 .icon {
-  font-size: 1rem;
+  font-size: 10px;
   right: 100%;
   top: 0;
   position: absolute;
@@ -28,15 +28,16 @@
   flex: none;
   flex-wrap: nowrap;
   background-image: linear-gradient(to bottom, #5b657b, #243448);
+  box-shadow:0px 2px 3px 0px rgba(0,0,0,0.2);
   border-radius: 4px;
   align-items: center;
   padding-right: 10px;
   color: #fff;
-  padding: 10px;
+  padding: 10px 5px;
 }
 
 .icon span {
-  font-size: 0.875rem;
+  font-size: 0.5rem;
   white-space: nowrap;
 }
 
