--- a/src/components/Common/Modal/styles.module.css
+++ b/src/components/Common/Modal/styles.module.css
@@ -31,6 +31,10 @@
     border-radius: 4px;
     box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.3);
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .title {
