--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -454,3 +454,29 @@ font-size: 1rem;
 .process dd button{
   display: flex;
 }
+
+.buttonBlock {
+  display: flex;
+  margin-top: 0.3em;
+  margin-bottom: 0.6em;
+  align-items: baseline;
+}
+
+.button {
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(to bottom, #5b657b, #243448);
+  color: #fff;
+  border: 0;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  padding: 0.1em 0.25em;
+  margin-right: .25em;
+}
+
+.button span {
+  font-size: 1rem;
+  color: #fff;
+  font-weight: normal;
+}
